--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,8 @@ services:
       - 9200:9200
     networks:
       - elastic
+    volumes:
+     - esdata01:/usr/share/elasticsearch/data
     
   kibana:
     image: docker.elastic.co/kibana/kibana:8.11.0
@@ -16,6 +18,15 @@ services:
       - 5601:5601
     networks:
       - elastic
-    
+    volumes:
+      - kibanadata:/usr/share/kibana/data
+
 networks:
   elastic:
+
+volumes:
+ esdata01:
+   driver: local
+ kibanadata:
+   driver: local
+
