--- a/.github/workflows/build-server.yml
+++ b/.github/workflows/build-server.yml
@@ -12,24 +12,19 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Checkout
+      - name: Checkout
         uses: actions/checkout@v4
-      -
-        name: Login to Docker Hub
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Set up Docker Buildx
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      -
-        name: Build and push if on main
-        working-directory: server
+      - name: Build and push if on main
         uses: docker/build-push-action@v5
         with:
-          context: .
-          file: ./Dockerfile
+          context: server
+          file: server/Dockerfile
           push: ${{ github.ref == 'refs/heads/main' }}
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/tff-hackathon-ui:latest
