--- a/.github/workflows/build-ui.yml
+++ b/.github/workflows/build-ui.yml
@@ -28,4 +28,4 @@ jobs:
           file: ui/Dockerfile
           push: true
           # push: ${{ github.ref == 'refs/heads/main' }}
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/tff-hackathon-server:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/tff-hackathon-ui:latest
