--- a/ui/package.json
+++ b/ui/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "pinia": "^2.1.7",
     "vue": "^3.3.4",
+    "vue-chartjs": "^5.2.0",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
