--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,8 +6,6 @@ services:
     environment: ['CLI_JAVA_OPTS=-Xms2g -Xmx2g','bootstrap.memory_lock=true','discovery.type=single-node','xpack.security.enabled=false', 'xpack.security.enrollment.enabled=false']
     ports:
       - 9200:9200
-    networks:
-      - elastic
     volumes:
      - esdata01:/usr/share/elasticsearch/data
     
@@ -16,13 +14,12 @@ services:
     container_name: kibana
     ports:
       - 5601:5601
-    networks:
-      - elastic
     volumes:
       - kibanadata:/usr/share/kibana/data
 
 
   server:
+    container_name: server
     # build: server
     image: setre14/tff-hackathon-server:latest
     pull_policy: always
@@ -32,27 +29,19 @@ services:
       ELASTICSEARCH_URL: elasticsearch
     ports:
      - 8080:8080
-    networks:
-      - elastic
     depends_on:
       - elasticsearch
 
   ui:
+    container_name: ui
     # build: ui
     image: setre14/tff-hackathon-ui:latest
     pull_policy: always
     restart: always
     ports:
      - 5174:80
-    environment:
-      SERVER_URL: server
-    networks:
-      - elastic
     depends_on:
       - server
-    
-networks:
-  elastic:
 
 volumes:
  esdata01:
